# app-web-captura-de-liveness

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md
.github/workflows/: ci.yml
src/backend/: README.md  pyproject.toml
src/backend/app/: __init__.py  main.py
src/backend/app/liveness/: __init__.py  engine.py
src/backend/app/schemas/: __init__.py  requests.py  responses.py
src/backend/app/services/: __init__.py  embeddings_service.py  faceapi_service.py  liveness_service.py  model_service.py
src/backend/tests/: conftest.py
src/backend/tests/integration/: test_api.py
src/backend/tests/unit/: test_embeddings_service.py  test_engine.py  test_faceapi_service.py  test_liveness_service.py  test_model_service.py
src/frontend/: package-lock.json  package.json  tailwind.config.ts  tsconfig.json
src/frontend/app/: layout.tsx  page.tsx
src/frontend/coverage/: clover.xml  coverage-final.json  index.html
src/frontend/coverage/frontend/: index.html  next.config.mjs.html  next.config.ts.html  postcss.config.js.html  tailwind.config.ts.html
src/frontend/coverage/frontend/app/: index.html  layout.tsx.html  page.tsx.html
src/frontend/coverage/frontend/lib/: index.html  liveness-message.ts.html
src/frontend/lib/: liveness-message.ts
src/frontend/tests/: liveness-message.test.ts  page.test.tsx
