[project]
name = "liveness-backend"
version = "0.1.0"
description = "FastAPI backend for real-time liveness detection"
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Cataldir" }]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0"
]

[tool.uv]
dev-dependencies = [
    "black>=24.4.0",
    "pylint>=3.2.0",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0"
]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
